--- a/css/styles.css
+++ b/css/styles.css
@@ -82,21 +82,33 @@ body {
   border-bottom: 1px solid var(--cornflower);
 }
 
-.current {
+.page {
   position: relative;
-  color: var(--iris);
 }
 
-.current::after {
+.page::after {
   content: "";
   position: absolute;
   left: 0;
-  width: 100%;
+  width: 0;
   height: 4px;
-  border: 2px solid var(--iris);
+  border: 2px solid transparent;
   border-radius: 4px;
-  background-color: var(--iris);
   bottom: -1px;
+  transition: width 250ms ease-in-out, background-color 250ms ease-in-out;
+}
+
+.page.current::after {
+  width: 100%;
+  background-color: var(--ocean);
+  border: 2px solid var(--ocean);
+}
+
+.page:hover::after,
+.page:focus::after {
+  border: 2px solid var(--ocean);
+  width: 100%;
+  background-color: var(--ocean);
 }
 
 /* END OF HEADER */
@@ -108,6 +120,8 @@ body {
   cursor: pointer;
   font-size: 16px;
   letter-spacing: 0.03em;
+  transition: background-color 250ms ease-in-out, color 250ms ease-in-out,
+    box-shadow 250ms ease-in-out;
 }
 
 .button.primary {
@@ -125,6 +139,8 @@ body {
   background-color: var(--ocean);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: background-color 250ms ease-in-out, color 250ms ease-in-out,
+    box-shadow 250ms ease-in-out;
 }
 
 .section {
@@ -272,6 +288,7 @@ body {
   border-radius: 50%;
   color: #f4f4fd;
   fill: currentColor;
+  transition: background-color 250ms ease-in-out;
 }
 
 .social-team .icon-item .link:hover,
@@ -312,6 +329,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 31px;
+  transition: color 250ms ease-in-out;
 }
 
 .contacts-menu .contact {
@@ -399,6 +417,7 @@ body {
   justify-content: center;
   align-items: center;
   color: var(--lightslate);
+  transition: color 250ms ease-in-out, border-color 250ms ease-in-out;
 }
 
 .partners .item .icon {
@@ -562,7 +581,7 @@ body {
   letter-spacing: 0.32px;
   background-color: var(--iris);
   color: var(--cloud);
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
